--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --border-color:rgb(222, 222, 222);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -30,8 +34,13 @@ form > * {
 }
 
 #form-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
     padding-bottom: 10px;
-    border-bottom: 1px solid rgb(222, 222, 222);
+    border-bottom: 1px solid var(--border-color);
 }
 
 #search-input {
@@ -48,12 +57,19 @@ form > * {
     border: 1px solid black;
 }
 
-#output-container>* {
-    padding-bottom: 5px;
+#output-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
 }
 
-#city-name {
-    padding-top: 5px;
+#data-container > * {
+    padding: 3px 0px;
+}
+
+#data-container {
+    width: 50%;
+    border-right: 2px solid var(--border-color);
 }
 
 #submit-button {
@@ -87,10 +103,32 @@ h2 {
 }
 
 #who-cares-container > * {
-    border-right: 2px solid rgb(220, 218, 218);
+    border-right: 2px solid var(--border-color);
     padding: 0px 2px;
 }
 
 #current-conditions {
     border-right: none;
+}
+
+#style-container {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center
+}
+
+#big-temperature {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    font-size: 75px;
+    letter-spacing: 0px;
+    transform: scale(1, 1);
+}
+
+#weather-condition-graphic {
+    width: 50%;
 }
