--- a/src/styles.css
+++ b/src/styles.css
@@ -127,6 +127,7 @@ h2 {
     font-size: 75px;
     letter-spacing: 0px;
     transform: scale(1, 1);
+    padding: 20px;
 }
 
 #weather-condition-graphic {
