--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ form > * {
 }
 
 #data-container {
-    width: 50%;
+    width: 70%;
     border-right: 2px solid var(--border-color);
 }
 
@@ -130,6 +130,79 @@ h2 {
     padding: 20px;
 }
 
+.degree-symbol {
+    margin: 0px 10px;
+    font-size: 20px;
+    font-weight: 200;
+}
+
 #weather-condition-graphic {
     width: 50%;
 }
+
+#toggle-degrees {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: 1s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #55758f;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #5b8bb2;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
