added working SVGs for a few different active image conditiobs

--- a/src/styles.css
+++ b/src/styles.css
@@ -206,3 +206,8 @@ h2 {
   .slider.round:before {
     border-radius: 50%;
   }
+
+  #weather-condition-image {
+    height: 90px;
+    width: 90px;
+  }
